Added code comments

--- a/src/app/shared/forms/verify-security-questions/verify-security-questions.component.html
+++ b/src/app/shared/forms/verify-security-questions/verify-security-questions.component.html
@@ -27,7 +27,7 @@
     <mat-card class="mat-elevation-z4 card-30">
       <h2>Verify Security Questions</h2>
 
-      <!-- For for verifying security questions -->
+      <!-- Form for verifying security questions -->
       <form
         *ngIf="selectedSecurityQuestions"
         [formGroup]="form"
