--- a/src/app/shared/forms/reset-password/reset-password.component.html
+++ b/src/app/shared/forms/reset-password/reset-password.component.html
@@ -8,7 +8,6 @@
 -->
 
 <div fxLayout="column">
-
   <div fxFlex>
     <h1 class="page-header">
       Forgot Password<br />
@@ -19,18 +18,11 @@
   </div>
 
   <div fxFlex.gt-sm="55" fxFlex="100">
-
     <mat-card class="card-30 mat-elevation-z4">
-
       <h2>Enter a new password</h2>
-
-      <form
-        [formGroup]="form"
-        (ngSubmit)="updatePassword()"
-        #resetPasswordForm
-      >
+      <!-- Form to update user password -->
+      <form [formGroup]="form" (ngSubmit)="updatePassword()" #resetPasswordForm>
         <mat-card-content fxLayout="column">
-
           <mat-form-field appearance="fill">
             <mat-label>Reset password</mat-label>
             <input
@@ -63,27 +55,26 @@
           </mat-form-field>
 
           <br /><br />
-
+          <!-- Buttons to confirm of cancel action-->
           <div fxFlex fxLayoutAlign="end" class="p5">
-            <button mat-raised-button routerLink="/session/login" class="cancel form-button">
+            <button
+              mat-raised-button
+              routerLink="/session/login"
+              class="cancel form-button"
+            >
               Cancel
-            </button> &nbsp;&nbsp;
-            <button mat-raised-button [disabled]="!form.valid" class="primary-color form-button">
+            </button>
+            &nbsp;&nbsp;
+            <button
+              mat-raised-button
+              [disabled]="!form.valid"
+              class="primary-color form-button"
+            >
               Submit
             </button>
           </div>
-
         </mat-card-content>
-
       </form>
-
     </mat-card>
-
   </div>
 </div>
-
-
-
-
-
-
