--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -68,7 +68,7 @@
           <!-- Services Menu -->
           <button mat-menu-item [matMenuTriggerFor]="services">
             <mat-icon>build</mat-icon>
-            Services
+            Reports
           </button>
           <mat-menu #services="matMenu">
             <button mat-menu-item routerLink="purchase-graph">
