--- a/src/app/pages/user-details/user-details.component.html
+++ b/src/app/pages/user-details/user-details.component.html
@@ -60,6 +60,22 @@
             </mat-error>
           </mat-form-field>
 
+          <!-- Role -->
+          <mat-form-field appearance="fill">
+            <mat-label>Role</mat-label>
+            <mat-select formControlName="role">
+              <mat-option *ngFor="let role of roles" [value]="role.text">
+                {{ role.text }}
+              </mat-option>
+            </mat-select>
+
+            <mat-error
+              class="error"
+              *ngIf="form.controls['role'].hasError('required') && form.controls['role'].touched">
+              Role is a required field.
+            </mat-error>
+          </mat-form-field>
+
           <!-- Phone Number -->
           <mat-form-field appearance="fill">
             <mat-label>Phone number</mat-label>
