user role update

--- a/src/app/pages/user-details/user-details.component.html
+++ b/src/app/pages/user-details/user-details.component.html
@@ -63,15 +63,13 @@
           <!-- Role -->
           <mat-form-field appearance="fill">
             <mat-label>Role</mat-label>
-            <mat-select formControlName="role">
+            <mat-select formControlName="role" required>
               <mat-option *ngFor="let role of roles" [value]="role.text">
                 {{ role.text }}
               </mat-option>
             </mat-select>
 
-            <mat-error
-              class="error"
-              *ngIf="form.controls['role'].hasError('required') && form.controls['role'].touched">
+            <mat-error class="error" *ngIf="form.controls['role'].hasError('required') && form.controls['role'].touched">
               Role is a required field.
             </mat-error>
           </mat-form-field>
