--- a/src/app/pages/profile-details/profile-details.component.html
+++ b/src/app/pages/profile-details/profile-details.component.html
@@ -65,6 +65,7 @@
           </mat-form-field>
 
           <!-- Role -->
+          <p style="font-size: 12px;">Only an admin can change your Role from the Configurations Menu</p>
           <mat-form-field appearance="fill">
             <mat-label>Role</mat-label>
             <mat-select formControlName="role" required>
