--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -17,6 +17,7 @@
         <div fxFlex>
           <h1>First Name : {{user.firstName}}</h1>
           <h1>Last Name : {{user.lastName}}</h1>
+          <h1>Role : {{user.role?.text}}</h1>
           <h1>Address: {{user.address}}</h1>
           <h1>Phone Number : {{user.phoneNumber}}</h1>
           <h1>Email : {{user.email}}</h1>
