--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -11,7 +11,7 @@
 <!-- Page Header -->
 <h1 class="page-header">About Us</h1>
 
-<mat-card>
+<mat-card class="card-style">
 
   <div fxLayout>
 
@@ -40,7 +40,7 @@
       </div>
 
       <!-- House Slytherin Image -->
-      <div class="content-container">
+      <div class="content-container img-center">
         <div class="img-container house-img">
           <img src="/assets/pngwing.com.png" alt="Slytherin Emblem" />
         </div>
