--- a/src/app/pages/roles-list/roles-list.component.html
+++ b/src/app/pages/roles-list/roles-list.component.html
@@ -69,7 +69,7 @@
           </tr>
         </ng-template>
 
-        <ng-template pTemplate="body" let-sq>
+        <ng-template pTemplate="body" let-role>
           <tr>
             <td>{{ role.text }}</td>
             <td class="api-buttons">
