--- a/src/app/pages/security-question-list/security-question-list.component.html
+++ b/src/app/pages/security-question-list/security-question-list.component.html
@@ -8,10 +8,7 @@
 -->
 
 <!-- security questions list page -->
-<p-confirmDialog [style]="{ width: '35vw' }" [baseZIndex]="10000"
-  rejectButtonStyleClass="p-button-text"></p-confirmDialog>
-
-<div fxLayout="column" fxLayoutGap="20px">
+<div fxLayout="column">
   <div fxFlex>
     <h1 class="page-header">
       Security Questions Configuration Page! <br />
@@ -51,7 +48,7 @@
         </form>
       </mat-card>
     </div>
-  </div>
+  </div> <br />
 
 
   <div fxFlex>
