--- a/src/app/pages/service-list/service-list.component.html
+++ b/src/app/pages/service-list/service-list.component.html
@@ -7,7 +7,7 @@
   Description: html for the bcrs project
 -->
 
-<div fxLayout="column" fxLayoutGap="20px">
+<div fxLayout="column">
 
   <!-- Page Header -->
   <div fxFlex>
@@ -68,7 +68,7 @@
         </form>
       </mat-card>
     </div>
-  </div>
+  </div><br />
 
   <!-- List of Active Services -->
   <div fxFlex>
