--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -18,7 +18,7 @@
     <p-messages [(value)]="errorMessages" [enableService]="false"></p-messages>
   </div>
 
-  <mat-card fxFlex class="card-form" style="border-radius: 10px">
+  <mat-card fxFlex class="card-form">
 
     <mat-card-content>
 
