--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -36,29 +36,26 @@ hr {
   width: 100%;
   margin-bottom: 20px;
 }
-.mat-card {
-  margin-top: 50px;
-  padding: 20px;
-}
+
 
 .mat-card-content {
   text-align: center;
 }
 
 .mat-form-field {
-  width: 60%;
+  width: 70%;
 }
 
 .mat-card-actions {
-  margin-right: 20%;
-  margin-bottom: 50px;
+  margin-right: 15%;
+  margin-bottom: 10px;
 }
 
 button {
+  width: 200px;
   font-size: 18px;
   font-weight: 700;
   float: right;
-  width: 25%;
   background-color: var(--green);
   color: black;
 }
@@ -66,7 +63,6 @@ button {
 .btn:disabled {
   background-color: transparent;
   color: #fff;
-
 }
 
 input {
@@ -76,16 +72,26 @@ input {
 }
 
 .create-account {
+  width: 50%;
+  margin-inline: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  gap: 25%;
+  justify-content: space-between;
   margin-bottom: 30px;
 }
 
-
-
 .error-message {
   background-color: red;
+}
+
+@media screen and (max-width: 800px) {
+
+  .mat-form-field, .create-account {
+    width: 95%;
+  }
+  .mat-card-actions {
+    margin-right: 2.5%;
+  }
+
 }
