--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -28,7 +28,7 @@
       </div>
 
       <!-- House Slytherin Image -->
-      <div class="content-container">
+      <div class="content-container img-center">
         <div class="img-container house-img">
           <img src="/assets/pngwing.com.png" alt="Slytherin Emblem" />
         </div>
