Added validation to createInvoice API

--- a/src/app/shared/invoice-summary/invoice-summary.component.html
+++ b/src/app/shared/invoice-summary/invoice-summary.component.html
@@ -7,4 +7,10 @@
   Description: html for the bcrs project
 -->
 
-<p>invoice-summary works!</p>
+<div fxLayout="column">
+  <mat-card class="mat-elevation-z0">
+    <mat-card-title mat-dialog-title style="text-align: center">
+      {{ username }} please confirm you order.
+    </mat-card-title>
+  </mat-card>
+</div>
