--- a/src/app/pages/roles-details/roles-details.component.html
+++ b/src/app/pages/roles-details/roles-details.component.html
@@ -2,8 +2,8 @@
   Title: roles-details.component.html
   Authors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
   Date: 05/01/23
-  Last Modified by: Walter McCue
-  Last Modification Date: 05/01/23
+  Last Modified by: Thomas Schultz
+  Last Modification Date: 05/03/23
   Description: html for the bcrs project
 -->
 <!-- update role page -->
