--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -22,3 +22,30 @@ Description: component styling for the bcrs project
   text-align: center;
   font-size: 14px;
 }
+
+mat-checkbox {
+  font-size: 1.5em;
+  line-height: 2em;
+  border: solid 2px black;
+  width: 100%;
+  margin-bottom: -2px;
+  padding: 0 25px;
+}
+
+mat-card-subtitle {
+  font-weight: 900;
+  font-size: 2.5em;
+}
+
+mat-checkbox:hover {
+  background-color: rgb(45, 45, 45);
+}
+
+mat-form-field {
+  font-size: 1.5em;
+}
+
+.border {
+  border: solid 2px black;
+  border-radius: 5px;
+}
