--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -49,3 +49,30 @@ mat-form-field {
   border: solid 2px black;
   border-radius: 5px;
 }
+
+.service-container mat-card-content {
+  width: 50%;
+  padding: 10px;
+}
+
+.service-container {
+  display: flex;
+}
+
+.cart-button {
+  float: right;
+  margin-top: 10px;
+}
+
+@media screen and (max-width: 1000px) {
+
+  .service-container mat-card-content {
+    width: 100%;
+    padding: 5px;
+  }
+
+  .service-container {
+    flex-direction: column;
+  }
+
+}
