--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -66,7 +66,7 @@
           </mat-menu>
 
           <!-- Services Menu -->
-          <button mat-menu-item [matMenuTriggerFor]="services" *ng-show="user.role == 'admin'">
+          <button mat-menu-item [matMenuTriggerFor]="services" *ngIf="user.role?.text == 'admin'">
             <mat-icon>build</mat-icon>
             Reports
           </button>
