--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -52,26 +52,31 @@
           </button>
           <mat-menu #configs="matMenu">
             <button mat-menu-item routerLink="user-list">
+              <mat-icon>supervisor_account</mat-icon>
               USERS
             </button>
             <button mat-menu-item routerLink="security-questions">
+              <mat-icon>question_answer</mat-icon>
               SECURITY QUESTIONS
             </button>
             <button mat-menu-item routerLink="roles">
+              <mat-icon> vpn_key</mat-icon>
               ROLES
             </button>
             <button mat-menu-item routerLink="service-list">
+              <mat-icon>build</mat-icon>
               SERVICES
             </button>
           </mat-menu>
 
           <!-- Services Menu -->
           <button mat-menu-item [matMenuTriggerFor]="services" *ngIf="user.role?.text == 'admin'">
-            <mat-icon>build</mat-icon>
+            <mat-icon>bar_chart</mat-icon>
             Reports
           </button>
           <mat-menu #services="matMenu">
             <button mat-menu-item routerLink="purchase-graph">
+              <mat-icon> pie_chart</mat-icon>
               Purchases by Service
             </button>
           </mat-menu>
