--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -41,9 +41,7 @@ mat-checkbox:hover {
   background-color: rgb(45, 45, 45);
 }
 
-mat-form-field {
-  font-size: 1.5em;
-}
+
 
 .border {
   border: solid 2px black;
@@ -53,6 +51,8 @@ mat-form-field {
 .flex-item {
   width: 50%;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .service-container {
@@ -61,10 +61,6 @@ mat-form-field {
   gap: 20px;
 }
 
-.cart-button {
-  float: right;
-  margin-top: 10px;
-}
 
 @media screen and (max-width: 1000px) {
 
